#2 UI frame distinations,foods card succesful

--- a/index.html
+++ b/index.html
@@ -269,124 +269,69 @@
             <div class="foods_list_card">
                 <div class="foods_card_item">
                     <div class="card_item_img" >
-                        <img src="img/huong-dan-cach-lam-mon-chao-ech-singapore-4.jpg" alt="">
+                        <img src="img/cho-dem-helio-1.jpg" alt="">
                     </div>
-                    <div class="card_item_bottom">
-                        <h4>Cardi Pizzeria Bạch Đằng</h4>
-                        <p class ="item_fee">Fee <span class='price'>$200</span></p> 
-                        <p>Web design basic to higer level</p>
-                        <span class="text_dots">
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>40 Classes</p>
-                            </div>
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>3 Months</p>
-                            </div>
-                        </span>
+                    <div class="card_item_content">
+                        <h4>Chợ đêm Helio</h4>
+                        <p class ="item_location"> <img src="img/location.png" alt=""><strong>Đường 2/9, Bình Hiên, Hải Châu, Thành Phố Đà Nẵng</strong></p> 
+                        <p class="decription">Chợ đêm Helio nổi bật với không gian rộng rãi, được trang trí ánh sáng rực rỡ và phong cách thiết kế hiện đại. Những gian hàng được bày biện bắt mắt, kết hợp với âm nhạc sôi động</p>
                     </div>
-                </div>
-                <div class="foods_card_item">
-                    <div class="card_item_img" >
-                        <img src="img/huong-dan-cach-lam-mon-chao-ech-singapore-4.jpg" alt="">
-                    </div>
-                    <div class="card_item_bottom">
-                        <h4>Web Development</h4>
-                        <p class ="item_fee">Fee <span class='price'>$200</span></p> 
-                        <p>Web development basic to higer level</p>
-                        <span class="text_dots">
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>30 Classes</p>
-                            </div>
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>5 Months</p>
-                            </div>
-                        </span>
-                    </div>
-                </div>
-                <div class="foods_card_item">
-                    <div class="card_item_img" >
-                        <img src="img/huong-dan-cach-lam-mon-chao-ech-singapore-4.jpg" alt="">
-                    </div>
-                    <div class="card_item_bottom">
-                        <h4>Web Design</h4>
-                        <p class ="item_fee">Fee <span class='price'>$200</span></p> 
-                        <p>UI/UX design basic to higer level</p>
-                        <span class="text_dots">
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>50 Classes</p>
-                            </div>
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>4 Months</p>
-                            </div>
-                        </span>
-                    </div>
-                </div>
-                <div class="foods_card_item">
-                    <div class="card_item_img" >
-                        <img src="img/huong-dan-cach-lam-mon-chao-ech-singapore-4.jpg" alt="">
-                    </div>
-                    <div class="card_item_bottom">
-                        <h4>Web Design</h4>
-                        <p class ="item_fee">Fee <span class='price'>$200</span></p> 
-                        <p>UI/UX design basic to higer level</p>
-                        <span class="text_dots">
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>50 Classes</p>
-                            </div>
-                            <div class="text">
-                                <div class="dot"></div>
-                                <p>4 Months</p>
-                            </div>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- COUTDOWN  -->
-    <section class="coutdown_section">
-        <div class="coutdown_section_container">
-            <div class="coutdown">
-                <div class="text_coutdown"><h1 class="counter" id="100">0 <h1>+</h1></h1></div>
-                <p>Popular Courses</p>
-            </div>
-            <div class="coutdown">
-                <div class="text_coutdown"><h1 class="counter" id="500">0 <h1>+</h1></h1></div>
+                    <button class="btn_view_more">
+                        <div class="btn_img">  <img src="img/icon_arrowright.png" alt=""></div>
 
-                <p>Skilled Trainer</p>
-            </div>
-            <div class="coutdown">
-                <div class="text_coutdown"><h1 class="counter" id="1">0 <h1>M+</h1></h1></div>
-                <p>Student Learning</p>
+                        <p>Xem thêm</p>
+                    </button>
+                </div>
+                <div class="foods_card_item">
+                    <div class="card_item_img" >
+                        <img src="img/cho-dem-helio-1.jpg" alt="">
+                    </div>
+                    <div class="card_item_content">
+                        <h4>Chợ đêm Helio</h4>
+                        <p class ="item_location"> <img src="img/location.png" alt=""><strong>Đường 2/9, Bình Hiên, Hải Châu, Thành Phố Đà Nẵng</strong></p> 
+                        <p class="decription">Chợ đêm Helio nổi bật với không gian rộng rãi, được trang trí ánh sáng rực rỡ và phong cách thiết kế hiện đại. Những gian hàng được bày biện bắt mắt, kết hợp với âm nhạc sôi động</p>
+                    </div>
+                    <button class="btn_view_more">
+                        <div class="btn_img">  <img src="img/icon_arrowright.png" alt=""></div>
+
+                        <p>Xem thêm</p>
+                    </button>
+                </div>
+                <div class="foods_card_item">
+                    <div class="card_item_img" >
+                        <img src="img/cho-dem-helio-1.jpg" alt="">
+                    </div>
+                    <div class="card_item_content">
+                        <h4>Chợ đêm Helio</h4>
+                        <p class ="item_location"> <img src="img/location.png" alt=""><strong>Đường 2/9, Bình Hiên, Hải Châu, Thành Phố Đà Nẵng</strong></p> 
+                        <p class="decription">Chợ đêm Helio nổi bật với không gian rộng rãi, được trang trí ánh sáng rực rỡ và phong cách thiết kế hiện đại. Những gian hàng được bày biện bắt mắt, kết hợp với âm nhạc sôi động</p>
+                    </div>
+                    <button class="btn_view_more">
+                      <div class="btn_img"> 
+                         <img src="img/icon_arrowright.png" alt=""></div>
+                        <p>Xem thêm</p>
+                    </button>
+                </div>
+                <div class="foods_card_item">
+                    <div class="card_item_img" >
+                        <img src="img/cho-dem-helio-1.jpg" alt="">
+                    </div>
+                    <div class="card_item_content">
+                        <h4>Chợ đêm Helio</h4>
+                        <p class ="item_location"> <img src="img/location.png" alt=""><strong>Đường 2/9, Bình Hiên, Hải Châu, Thành Phố Đà Nẵng</strong></p> 
+                        <p class="decription">Chợ đêm Helio nổi bật với không gian rộng rãi, được trang trí ánh sáng rực rỡ và phong cách thiết kế hiện đại. Những gian hàng được bày biện bắt mắt, kết hợp với âm nhạc sôi động</p>
+                    </div>
+                    <button class="btn_view_more">
+                        <div class="btn_img">  <img src="img/icon_arrowright.png" alt=""></div>
+
+                        <p>Xem thêm</p>
+                    </button>
+                </div>
+                
             </div>
         </div>
     </section>
-    <!-- RATE -->
-    <section id="About" class="about_section">
-    <div class="about_container">
-        <div class="about_container_text">
-             <img class="img_union" src="img/union.png" alt="">
-            <div class="text">
-                <span>“They are the best people. And this is the suitable platform to learn from distance.”</span>
-                <p><strong style="color: black;">- Ben Foakes,</strong> student.</p>
-            </div>
-            <div class="buttons">
-                <button id="prev"><img src="img/prev.png" alt=""></button>
-                <button id="next"><img src="img/next.png" alt=""></button>
-            </div>
-            </div>    
-            <div class="about_container_img">
-                <img src="img/slider_img.png" alt="">
-            </div>
-    </div>
-    </section>
+   
     <!-- CONTACT  -->
     <section id="Contact" class="cta_section">
         <div class="cta_section_container">
