--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="Home" class="hero_section">
         <header class="header">
             <div class="container_header">
-                <a href="#Home"> <img class="logo_img" src="./img/Logo.png" alt=""></a>                
+                <a href="#Home"> <img class="logo_img" src="./img/logo.png" alt="logo"></a>                
             <nav class="header_nav" >
                     <ul class="header_nav-list">
                         <li class="header_nav-item">
