#9 fix logo footer, content footer

--- a/index.html
+++ b/index.html
@@ -626,31 +626,29 @@
     <footer class="footer">
         <div class="footer_container">
             <div class="container_menu">
-            <a href="#Home"><img  class="logo_img" src="img/Logo.png" alt=""></a>
+                <a href="#Home"><img class="logo_img" src="./img/logo.png" alt="logo"></a>
                 <div class="menu_product">
-                    <h4>Company</h4>
+                    <h4>Explore</h4>
                     <ul class="menu_list">
-                        <li>About</li>
-                        <li>Careers</li>
-                        <li>Press</li>
+                        <li>Top Destinations</li>
+                        <li>Guided Tours</li>
+                        <li>Attractions</li>
                     </ul>
                 </div>
                 <div class="menu_product">
-                    <h4>Community</h4>
+                    <h4>Travel Tips</h4>
                     <ul class="menu_list">
-                        <li>Team Plans</li>
-                        <li>Blog</li>
-                        <li>Students</li>
-                        <li>Schoolarships</li>
+                        <li>Travel Blog</li>
+                        <li>Safety Tips</li>
+                        <li>Packing Guide</li>
                     </ul>
                 </div>
                 <div class="menu_product">
-                    <h4>Teaching</h4>
+                    <h4>Support</h4>
                     <ul class="menu_list">
-                        <li>Become a teacher</li>
-                        <li>Teaching academy</li>
-                        <li>Privacy</li>
-                        <li>Sitemap</li>
+                        <li>Contact Us</li>
+                        <li>FAQs</li>
+                        <li>Help Center</li>
                     </ul>
                 </div>
                 <div class="menu_product">
@@ -659,12 +657,12 @@
                         <li><i class="fa-brands fa-twitter"></i> Twitter</li>
                         <li><i class="fa-brands fa-facebook-f"></i> Facebook</li>
                         <li><i class="fa-brands fa-instagram"></i> Instagram</li>
-                        <li><i class="fa-brands fa-linkedin"></i> Linkedin</li>
+                        <li><i class="fa-brands fa-linkedin"></i> LinkedIn</li>
                     </ul>
                 </div>
             </div>
         </div>
-        <p style="text-align: center; margin-top: 3rem; color: white;">© Copyright 2024 by HACKERRANK All right reserved.</p>
+        <p style="text-align: center; margin-top: 3rem; color: white;">© Copyright 2024 by HACKERRANK All rights reserved.</p>
     </footer>
     
     <div id="popup" class="popup">
