#13 fix error text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="header_nav-link" href="#AboutUs">About us</a>
                         </li>
                         <li class="header_nav-item">
-                            <a class="header_nav-link" href="#Distinations">Distinations</a>
+                            <a class="header_nav-link" href="#Distinations">Destinations</a>
                         </li>
                         <li class="header_nav-item">
                             <a class="header_nav-link" href="#Foods">Foods</a>
@@ -123,7 +123,7 @@
         <div data-aos="fade-up">
 
             <div class="distinations_container_content">
-                <p>D I S T I N A T I O N S</p>
+                <p>DESTINATIONS</p>
                 <h2>Hãy cùng chúng tôi khám phá các địa danh nổi tiếng ở Đà Nẵng</h2>
                 <p>Đọc về những điều kỳ diệu của Đà Nẵng và khám phá những điểm đến tuyệt vời nhất. Hãy sẵn sàng để khám phá và tạo nên những kỷ niệm khó quên cùng chúng tôi.</p>
             </div>
